--- a/colmarAcademy.css
+++ b/colmarAcademy.css
@@ -90,6 +90,7 @@ main {
     color: white;
     border: none;
     padding: 8px;
+    width: 90%;
 }
 /* main-info */
 .info {
@@ -151,7 +152,6 @@ main {
     flex-flow: row wrap;
     gap: 32px;
     justify-content: center;
-    border: 1px solid red;
 }
 .course-card {
     display: flex;
@@ -266,7 +266,67 @@ footer ul a {
         display: flex;
     }
     /* main-hero */
+    .hero {
+        /* display: flex; */
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0 0 32px 0;
+    }
+    .hero_img {
+        width: 100%;
+    }
+    .hero_text {
+        width: 100%;
+        margin-left: 16px;
+    }
+    .hero_text h3 {
+        margin: 32px 0 24px;
+    }
+    .hero_text h2 {
+        margin-top: 32px;
+    }
+    .hero_text button {
+        background-color: gray;
+    }
     /* main-info */
+    .info_start {
+        display: none;
+    }
+    .info_detail {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .info_detail_card {
+        flex-direction: column;
+        padding: 16px 16px 32px;
+    }
+    .info_detail_card:first-child {
+        margin-top: 0px;
+    }
+    .info_detail_card img {
+        width: 100%;
+    }
+    .info_detail_card_text {
+        width: 100%;
+        justify-content: center;
+        padding-left: 16px;
+    }
+    .info_detail_card_text p {
+        margin: 8px 0;
+    }
+    .info_detail_card_text h4 {
+        margin-top: 16px;
+    }
+    #orientation {
+        content: url(./images/information-orientation-mobile.jpg);
+    }
+    #campus {
+        content: url(./images/information-campus-mobile.jpg);
+    }
+    #guest {
+        content: url(./images/information-guest-lecture-mobile.jpg);
+    }
     /* main-course */
     .course_desktop {
         display: none;
